Fixed minor CSS details to align the logo with the nav bar on all the pages, so it is consitent. Added all the different shits on the schedule page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body {
     font-size: 18px;
     padding: 10px;
     color: black;
+    font-variant: normal;
 }
 
 p {
@@ -84,6 +85,7 @@ p {
     max-width: 100%;
     height: auto;
     opacity: .9;
+    border-radius: 4px 4px 4px 4px;
 }
 
 .logo:hover{
@@ -100,7 +102,8 @@ p {
 .row{
     margin: 0 auto;
     font-variant: small-caps;
-    color: #FFF;
+    text-align: center;
+    font-size: 20px;
 } 
 
 
@@ -130,6 +133,7 @@ p {
     border: 1px solid #DDDDDD;
     border-radius: 4px 4px 4px 4px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 }
 
 .pre-scrollable {
@@ -173,5 +177,7 @@ li {
 
 .check-box {
     color: #000;
+    text-align: left;
 }
+
 
